Fixed lora tags dropdown leaving empty space on mobile and options menu having a scrollbar

--- a/src/app/home/options/generation-options-panel/generation-options-panel.component.css
+++ b/src/app/home/options/generation-options-panel/generation-options-panel.component.css
@@ -21,7 +21,6 @@
 @media (max-width: 480px) {
   .card-body {
     min-height: 70vh;
-    max-height: 80vh;
     overflow-y: auto;
     transition: height 0.5s ease-in-out;
   }
